Aggiunto "cameraData". corretto qualche tokenChecker
